{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 220,
  "lineage": "bec82b03-a9c1-f7bf-c861-bb287eaf6d0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631557259816:listener/app/apache-alb/0e54a0b7da6da6d9/377f9182ee9dd630",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:631557259816:targetgroup/apache-tg/a8b26e910e9e4134",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631557259816:listener/app/apache-alb/0e54a0b7da6da6d9/377f9182ee9dd630",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:631557259816:loadbalancer/app/apache-alb/0e54a0b7da6da6d9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb-sg",
            "aws_subnet.Public_subnet_1",
            "aws_subnet.Public_subnet_2",
            "aws_subnet.Public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de1759f6b677403f",
            "association_id": "eipassoc-0cc284e05ce7840d0",
            "domain": "vpc",
            "id": "eipalloc-0de1759f6b677403f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d3d284b36691c21",
            "private_dns": "ip-10-0-12-150.ec2.internal",
            "private_ip": "10.0.12.150",
            "public_dns": "ec2-3-95-93-82.compute-1.amazonaws.com",
            "public_ip": "3.95.93.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apache-nat-eip"
            },
            "tags_all": {
              "Name": "apache-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:internet-gateway/igw-0e7a6210c8ae4f488",
            "id": "igw-0e7a6210c8ae4f488",
            "owner_id": "631557259816",
            "tags": {
              "Name": "apache-igw"
            },
            "tags_all": {
              "Name": "apache-igw"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631557259816:loadbalancer/app/apache-alb/0e54a0b7da6da6d9",
            "arn_suffix": "app/apache-alb/0e54a0b7da6da6d9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-alb-1634141125.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:631557259816:loadbalancer/app/apache-alb/0e54a0b7da6da6d9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01d5ad243dd6f7986"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b1f17517414c3fb6"
              },
              {
                "subnet_id": "subnet-0e454b55de54fa65a"
              },
              {
                "subnet_id": "subnet-0e8d00ccbffa300d9"
              }
            ],
            "subnets": [
              "subnet-0b1f17517414c3fb6",
              "subnet-0e454b55de54fa65a",
              "subnet-0e8d00ccbffa300d9"
            ],
            "tags": {
              "Name": "apache-alb"
            },
            "tags_all": {
              "Name": "apache-alb"
            },
            "vpc_id": "vpc-03e7a5a72894c955f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.Public_subnet_1",
            "aws_subnet.Public_subnet_2",
            "aws_subnet.Public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631557259816:targetgroup/apache-tg/a8b26e910e9e4134",
            "arn_suffix": "targetgroup/apache-tg/a8b26e910e9e4134",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631557259816:targetgroup/apache-tg/a8b26e910e9e4134",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de1759f6b677403f",
            "association_id": "eipassoc-0cc284e05ce7840d0",
            "connectivity_type": "public",
            "id": "nat-0730131311dbc0695",
            "network_interface_id": "eni-02d3d284b36691c21",
            "private_ip": "10.0.12.150",
            "public_ip": "3.95.93.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e454b55de54fa65a",
            "tags": {
              "Name": "apache-NAT-gateway"
            },
            "tags_all": {
              "Name": "apache-NAT-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:route-table/rtb-0241b71dd7cc78c88",
            "id": "rtb-0241b71dd7cc78c88",
            "owner_id": "631557259816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7a6210c8ae4f488",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-public-rt"
            },
            "tags_all": {
              "Name": "apache-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:route-table/rtb-0b00cbf7d354a007e",
            "id": "rtb-0b00cbf7d354a007e",
            "owner_id": "631557259816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0730131311dbc0695",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-rt-1"
            },
            "tags_all": {
              "Name": "apache-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:route-table/rtb-014ec8a8617764057",
            "id": "rtb-014ec8a8617764057",
            "owner_id": "631557259816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0730131311dbc0695",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-rt-2"
            },
            "tags_all": {
              "Name": "apache-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:route-table/rtb-078ea40a85e0e5c28",
            "id": "rtb-078ea40a85e0e5c28",
            "owner_id": "631557259816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0730131311dbc0695",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-rt-3"
            },
            "tags_all": {
              "Name": "apache-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dfd38808632e927",
            "route_table_id": "rtb-0b00cbf7d354a007e",
            "subnet_id": "subnet-0e01a723796255219"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_route_1",
            "aws_subnet.Private_subnet_1",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a0813045f460f23",
            "route_table_id": "rtb-014ec8a8617764057",
            "subnet_id": "subnet-05de62199375cdd05"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_route_2",
            "aws_subnet.Private_subnet_2",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a06d02406ee71667",
            "route_table_id": "rtb-078ea40a85e0e5c28",
            "subnet_id": "subnet-0c4a0360b23143895"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_route_3",
            "aws_subnet.Private_subnet_3",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f117c6a35032dfcc",
            "route_table_id": "rtb-0241b71dd7cc78c88",
            "subnet_id": "subnet-0e454b55de54fa65a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.Public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824e99e7496cbacb",
            "route_table_id": "rtb-0241b71dd7cc78c88",
            "subnet_id": "subnet-0b1f17517414c3fb6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.Public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b56b24f53ca262e",
            "route_table_id": "rtb-0241b71dd7cc78c88",
            "subnet_id": "subnet-0e8d00ccbffa300d9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.Public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:security-group/sg-057314184281e0dea",
            "description": "Security group for ec2-apache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057314184281e0dea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d5ad243dd6f7986"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-ec2-sg20231108191825043800000001",
            "name_prefix": "apache-ec2-sg",
            "owner_id": "631557259816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:security-group/sg-01d5ad243dd6f7986",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d5ad243dd6f7986",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg20231108184653051900000001",
            "name_prefix": "alb-sg",
            "owner_id": "631557259816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-0e01a723796255219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e01a723796255219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-1"
            },
            "tags_all": {
              "Name": "apache-private-subnet-1"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-05de62199375cdd05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05de62199375cdd05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-2"
            },
            "tags_all": {
              "Name": "apache-private-subnet-2"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-0c4a0360b23143895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a0360b23143895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-3"
            },
            "tags_all": {
              "Name": "apache-private-subnet-3"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-0e454b55de54fa65a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e454b55de54fa65a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-1"
            },
            "tags_all": {
              "Name": "apache-public-subnet-1"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-0b1f17517414c3fb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f17517414c3fb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-2"
            },
            "tags_all": {
              "Name": "apache-public-subnet-2"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:subnet/subnet-0e8d00ccbffa300d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8d00ccbffa300d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631557259816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-3"
            },
            "tags_all": {
              "Name": "apache-public-subnet-3"
            },
            "vpc_id": "vpc-03e7a5a72894c955f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631557259816:vpc/vpc-03e7a5a72894c955f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b138d1cde73a8510",
            "default_route_table_id": "rtb-053ad75cf6e98c838",
            "default_security_group_id": "sg-03d9b5920793e50b0",
            "dhcp_options_id": "dopt-04756158330260254",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e7a5a72894c955f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053ad75cf6e98c838",
            "owner_id": "631557259816",
            "tags": {
              "Name": "apache-vpc"
            },
            "tags_all": {
              "Name": "apache-vpc"
            }
          }
        }
      ]
    }
  ]
}